--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 dist: trusty
 language: java
 jdk:
-  - openjdk
-  - oraclejdk9
-  - oraclejdk10
+  - oraclejdk8
+  - openjdk8
+  - oraclejdk11
+  - openjdk11
+  - oraclejdk14
+  - openjdk14
