--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 dist: trusty
 language: java
+install: ant deps
 jdk:
   - oraclejdk8
   - openjdk8
   - oraclejdk11
   - openjdk11
-  - oraclejdk14
-  - openjdk14
